# cs2kz-api

./: .clippy.toml  .editorconfig  .env.example  .envrc  .example.env  .gitignore  .gitmodules  .rustfmt.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  api-spec.json  clippy.toml  compose.yaml  compose.yml  cs2kz-api.example.toml  cs2kz-api.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  treefmt.toml
.cargo/: config.toml
crates/cs2kz/: Cargo.toml  README.md
crates/cs2kz-api/: Cargo.toml
crates/cs2kz-api/migrations/: 0001_schema.down.sql  0001_schema.up.sql
crates/cs2kz-api/src/: auth.rs  bans.rs  cli.rs  config.rs  database.rs  email.rs  events.rs  git.rs  jumpstats.rs  lib.rs  macros.rs  main.rs  metrics.rs  openapi.rs  pagination.rs  players.rs  plugin_versions.rs  problem_details.rs  records.rs  replays.rs  runtime.rs  serde.rs  serve.rs  server.rs  servers.rs  signals.rs  state.rs  taskdump.rs  testing.rs  time.rs  users.rs
crates/cs2kz-api/src/auth/: authorization.rs  data.rs  error.rs  id.rs  mod.rs  permissions.rs  store.rs
crates/cs2kz-api/src/cli/: args.rs  mod.rs
crates/cs2kz-api/src/config/: access_keys.rs  cookies.rs  database.rs  depot_downloader.rs  http.rs  mod.rs  runtime.rs  server.rs  steam.rs  steam_auth.rs  tracing.rs
crates/cs2kz-api/src/config/tracing/: console.rs  files.rs  journald.rs  mod.rs  stderr.rs
crates/cs2kz-api/src/database/: error.rs  error_ext.rs  limit.rs  macros.rs  mod.rs  offset.rs  pool.rs  row_stream.rs  uuid_as_bytes.rs
crates/cs2kz-api/src/extract/: extension.rs  header.rs  json.rs  mod.rs  path.rs  query.rs
crates/cs2kz-api/src/extract/header/: mod.rs  rejection.rs
crates/cs2kz-api/src/extract/json/: mod.rs  rejection.rs
crates/cs2kz-api/src/http/: created.rs  location.rs  mod.rs  no_content.rs  openapi.rs  players.rs  plugin.rs  problem.rs  problem_details.rs  servers.rs  users.rs
crates/cs2kz-api/src/internal/: is_localhost.rs  mod.rs  taskdump.rs
crates/cs2kz-api/src/maps/: map_identifier.rs  mod.rs
crates/cs2kz-api/src/middleware/: catch_panic.rs  cors.rs  mod.rs  request_id.rs  trace.rs  trim_trailing_slash.rs
crates/cs2kz-api/src/openapi/: mod.rs  shims.rs
crates/cs2kz-api/src/players/: database.rs  mod.rs  name.rs  player_id.rs  player_identifier.rs  register.rs
crates/cs2kz-api/src/plugin/: mod.rs  plugin_version_id.rs  plugin_version_name.rs  version_identifier.rs
crates/cs2kz-api/src/plugin_versions/: database.rs  submit.rs  version_name.rs
crates/cs2kz-api/src/response/: error.rs  mod.rs
crates/cs2kz-api/src/serde/: either.rs  mod.rs  non_empty.rs
crates/cs2kz-api/src/servers/: access_key.rs  approve.rs  database.rs  host.rs  mod.rs  name.rs  server_id.rs  server_identifier.rs  update.rs
crates/cs2kz-api/src/services/: mod.rs
crates/cs2kz-api/src/stats/: bhop_stats.rs  game_sessions.rs  mod.rs
crates/cs2kz-api/src/steam/: maps.rs  mod.rs  users.rs
crates/cs2kz-api/src/testing/: macros.rs  mod.rs
crates/cs2kz-api/src/tracing/: console.rs  files.rs  journald.rs  mod.rs  stderr.rs
crates/cs2kz-api/src/users/: database.rs  email.rs  mod.rs  permissions.rs  register.rs  update.rs  user_id.rs
crates/cs2kz-api/src/util/: either.rs  git_revision.rs  mod.rs  net.rs  non_empty.rs  num.rs
crates/cs2kz-api/src/ws/: message.rs  mod.rs
crates/cs2kz/migrations/: .gitignore  0001_initial.up.sql  0002_remove_points_based_on_pro_leaderboard_column.sql  0003_store_time_in_pb_tables.sql  0005_migrate_ban_ids.sql
crates/cs2kz/src/: context.rs  course_identifier.rs  either.rs  email.rs  global_status.rs  identifier.rs  jump_type.rs  lib.rs  macros.rs  map_approval_status.rs  map_identifier.rs  mode.rs  num.rs  pagination.rs  player_identifier.rs  plugin.rs  python.rs  ranked_status.rs  records.rs  replays.rs  server_identifier.rs  steam.rs  steam_id.rs  string.rs  style.rs  styles.rs  tier.rs
crates/cs2kz/src/access_keys/: access_key.rs  mod.rs
crates/cs2kz/src/bans/: banned_by.rs  mod.rs  reason.rs
crates/cs2kz/src/config/: database.rs  mod.rs  replay_storage.rs
crates/cs2kz/src/database/: error.rs  macros.rs  mod.rs
crates/cs2kz/src/fmt/: display_as_debug.rs  io_compat.rs
crates/cs2kz/src/git/: revision.rs
crates/cs2kz/src/jump_type/: errors.rs  mod.rs  rand.rs  serde.rs  sqlx.rs
crates/cs2kz/src/jumpstats/: jump_type.rs  mod.rs
crates/cs2kz/src/map_status/: errors.rs  mod.rs  rand.rs  serde.rs  sqlx.rs
crates/cs2kz/src/maps/: checksum.rs  mod.rs  state.rs  stream.rs
crates/cs2kz/src/mode/: errors.rs  mod.rs  rand.rs  serde.rs  sqlx.rs  utoipa.rs
crates/cs2kz/src/players/: mod.rs  player_id.rs
crates/cs2kz/src/points/: calculator.rs  daemon.rs  distribution.rs  mod.rs  worker.rs
crates/cs2kz/src/ranked_status/: errors.rs  mod.rs  rand.rs  serde.rs  sqlx.rs
crates/cs2kz/src/servers/: mod.rs  server_host.rs
crates/cs2kz/src/steam_id/: errors.rs  mod.rs  rand.rs  serde.rs  sqlx.rs
crates/cs2kz/src/styles/: errors.rs  iter.rs  mod.rs  sqlx.rs  style.rs
crates/cs2kz/src/tier/: errors.rs  mod.rs  rand.rs  serde.rs  sqlx.rs
crates/cs2kz/src/time/: duration_ext.rs  seconds.rs  timestamp.rs
crates/cs2kz/src/users/: mod.rs  permissions.rs  user_id.rs
crates/macros/: Cargo.toml
crates/macros/src/: error.rs  handler_attr.rs  id.rs  integration_test.rs  lib.rs  test_attr.rs
crates/problem-details/: Cargo.toml  LICENSE.txt  README.md
crates/problem-details-derive/: Cargo.toml
crates/problem-details-derive/src/: as_problem_details.rs  lib.rs
crates/problem-details/src/: as_problem_details.rs  extension_members.rs  lib.rs  problem_type.rs  serde_helpers.rs
crates/steam-id/: Cargo.toml  README.md
crates/steam-id/src/: account_instance.rs  account_number.rs  account_type.rs  account_universe.rs  builder.rs  community_id.rs  error.rs  instance.rs  lib.rs  rand_impls.rs  serde_impls.rs  universe.rs
crates/steam-id/src/serde/: mod.rs  visitors.rs
crates/steam-openid/: Cargo.toml  README.md
crates/steam-openid/src/: callback.rs  callback_payload.rs  errors.rs  lib.rs  login_form.rs  login_url.rs
(+761 files in other folders)
