# CS2KZ API
#
# Copyright (C) 2024  AlphaKeks <alphakeks@dawn>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see https://www.gnu.org/licenses.

[workspace]
resolver = "2"
default-members = ["crates/cs2kz-api"]
exclude = ["vendor"]
members = [
  "crates/cs2kz",
  "crates/cs2kz-api",
  "crates/steam-openid",
  "crates/problem-details",
]

[patch.crates-io]
utoipa = { path = "./vendor/utoipa/utoipa" }
utoipa-swagger-ui = { path = "./vendor/utoipa/utoipa-swagger-ui" }

[workspace.dependencies.cs2kz]
path = "crates/cs2kz"
features = ["serde", "sqlx"]

[workspace.dependencies.thiserror]
version = "1.0"

[workspace.dependencies.tokio]
version = "1.40"
features = ["macros", "rt-multi-thread", "sync", "net"]

[workspace.dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.time]
version = "0.3"
features = ["serde-human-readable"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.uuid]
version = "1.0"
features = ["v4", "v7", "serde"]

[workspace.dependencies.semver]
version = "1.0"
features = ["serde"]

[workspace.dependencies.derive_more]
version = "1.0"
features = ["debug", "display", "deref", "from", "into", "from_str"]
