# CS2KZ API
#
# Copyright (C) 2024  AlphaKeks <alphakeks@dawn>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see https://www.gnu.org/licenses.

[workspace]
resolver = "2"
default-members = ["crates/cs2kz-api"]
members = [
  "crates/cs2kz",
  "crates/cs2kz-api-common",
  "crates/cs2kz-api-database",
  "crates/cs2kz-api",
  "crates/cs2kz-api-server",
  "crates/cs2kz-api-cli",
]

[workspace.package]
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
rust-version = "1.82"
documentation = "https://docs.cs2kz.org/api"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license = "GPL-3.0"

[workspace.dependencies]

# https://doc.rust-lang.org/rustc/lints/listing/index.html
[workspace.lints.rust]
ambiguous_negative_literals = "warn"
deprecated_safe_2024 = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
impl_trait_overcaptures = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
unit_bindings = "warn"
unsafe_op_in_unsafe_fn = "forbid"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

# https://rust-lang.github.io/rust-clippy/rust-1.82.0/index.html
[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
as_conversions = "deny"
as_underscore = "deny"
assigning_clones = "deny"
bool_to_int_with_if = "deny"
branches_sharing_code = "warn"
builtin_type_shadow = "deny"
cast_lossless = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"
clear_with_drain = "warn"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "warn"
cognitive_complexity = "warn"
collection_is_never_read = "warn"
copy_iterator = "deny"
create_dir = "warn"
dbg_macro = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_line_after_doc_comments = "deny"
empty_loop = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
exit = "deny"
expl_impl_clone_on_copy = "deny"
explicit_auto_deref = "allow"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filetype_is_file = "warn"
filter_map_next = "deny"
flat_map_option = "deny"
fn_params_excessive_bools = "deny"
format_push_string = "deny"
from_over_into = "deny"
future_not_send = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "deny"
implicit_hasher = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
infinite_loop = "deny"
inherent_to_string = "deny"
init_numbered_fields = "deny"
into_iter_without_iter = "warn"
items_after_statements = "deny"
items_after_test_module = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
many_single_char_names = "deny"
map_err_ignore = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatching_type_param_order = "deny"
missing_assert_message = "deny"
missing_const_for_fn = "warn"
missing_docs_in_private_items = "warn"
missing_safety_doc = "forbid"
mixed_read_write_in_expression = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_bitwise_bool = "deny"
needless_collect = "warn"
needless_for_each = "warn"
needless_return = "deny"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
rc_buffer = "warn"
read_zero_byte_vec = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
single_char_pattern = "warn"
single_match_else = "deny"
str_split_at_newline = "warn"
str_to_string = "deny"
string_add = "deny"
string_add_assign = "deny"
string_lit_as_bytes = "warn"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
tests_outside_test_module = "deny"
todo = "warn"
trait_duplication_in_bounds = "warn"
try_err = "deny"
undocumented_unsafe_blocks = "forbid"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unseparated_literal_suffix = "deny"
unused_async = "warn"
unused_self = "warn"
unwrap_used = "deny"
use_self = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "deny"
wildcard_enum_match_arm = "warn"
wildcard_imports = "deny"
