[package]
name = "cs2kz-api"
version = "0.0.0-dev"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false
default-run = "cs2kz-api"

[[bin]]
name = "cs2kz-api-generator"
path = "src/bin/generator/main.rs"
required-features = ["generator"]

[features]
generator = ["rand", "fake"]
rand = ["dep:rand", "steam-id/rand"]

[lints]
workspace = true

[dependencies.steam-id]
path = "crates/steam-id"
features = ["serde"]

[dependencies.problem-details]
path = "crates/problem-details"
features = ["axum", "utoipa"]

[dependencies.steam-openid]
path = "crates/steam-openid"

[dependencies.derive_more]
workspace = true

[dependencies.bon]
workspace = true

[dependencies.color-eyre]
workspace = true

[dependencies.dotenvy]
workspace = true

[dependencies.clap]
workspace = true
features = ["env"]

[dependencies.zerocopy]
workspace = true

[dependencies.pin-project]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.time]
workspace = true
features = ["serde-human-readable"]

[dependencies.url]
workspace = true
features = ["serde"]

[dependencies.ulid]
workspace = true
features = ["serde"]

[dependencies.semver]
workspace = true
features = ["serde"]

[dependencies.serde]
workspace = true
features = ["rc", "derive"]

[dependencies.serde_json]
workspace = true

[dependencies.serde_html_form]
workspace = true

[dependencies.toml]
workspace = true
features = ["parse"]

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["time", "env-filter", "fmt", "ansi", "json"]

[dependencies.tracing-appender]
version = "0.2"

[dependencies.console-subscriber]
version = "0.4"

[dependencies.tracing-journald]
version = "0.3"

[dependencies.futures-util]
workspace = true

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "sync", "signal", "process"]

[dependencies.tokio-util]
workspace = true
features = ["rt", "time"]

[dependencies.tokio-websockets]
workspace = true

[dependencies.tower]
workspace = true

[dependencies.http]
workspace = true

[dependencies.http-body-util]
workspace = true

[dependencies.headers]
workspace = true

[dependencies.mime]
workspace = true

[dependencies.cookie]
workspace = true

[dependencies.tower-http]
workspace = true
features = ["cors", "request-id", "trace"]

[dependencies.reqwest]
workspace = true
features = ["json"]

[dependencies.axum]
version = "0.8"
default-features = false
features = ["macros", "tracing", "tokio", "http1", "http2", "json"]

[dependencies.axum-extra]
version = "0.10"
features = ["cookie"]

[dependencies.axum-server]
version = "0.7"

[dependencies.axum-tws]
version = "0.5"
features = ["http2"]

[dependencies.utoipa]
workspace = true
features = ["preserve_path_order", "non_strict_integers"]

[dependencies.utoipa-swagger-ui]
version = "9.0"
features = ["vendored"]

[dependencies.sqlx]
workspace = true

[dependencies.lettre]
workspace = true

[dependencies.addr]
workspace = true

[dependencies.md-5]
workspace = true

[dependencies.rand]
workspace = true
optional = true

[dependencies.fake]
optional = true
version = "4.2"
features = ["derive"]

[dependencies.pyo3]
version = "0.23"
default-features = false
features = ["auto-initialize"]

[dependencies.poise]
version = "0.6"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2024"
documentation = "https://docs.cs2kz.org"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license = "GPL-3.0"

# https://doc.rust-lang.org/rustc/lints/listing/index.html
[workspace.lints.rust]
async_fn_in_trait = "allow"
closure_returning_async_block = "warn"
elided_lifetimes_in_paths = "deny"
missing_debug_implementations = "warn"
non_ascii_idents = "deny"
non_exhaustive_omitted_patterns = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unqualified_local_imports = "deny"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_parens = "allow"

# https://doc.rust-lang.org/rustdoc/lints.html
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
private_doc_tests = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
as_pointer_underscore = "deny"
as_ptr_cast_mut = "warn"
as_underscore = "deny"
assertions_on_result_states = "deny"
assigning_clones = "deny"
await_holding_invalid_type = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
builtin_type_shadow = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
cfg_not_test = "warn"
checked_conversions = "deny"
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
copy_iterator = "deny"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
default_union_representation = "warn"
derive_partial_eq_without_eq = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
error_impl_error = "deny"
exit = "deny"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
explicit_auto_deref = "allow"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
format_push_string = "deny"
get_unwrap = "deny"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_hasher = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infallible_destructuring_match = "allow"
infinite_loop = "warn"
into_iter_without_iter = "warn"
items_after_statements = "deny"
items_after_test_module = "deny"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
manual_assert = "deny"
manual_async_fn = "allow"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
match_on_vec_items = "deny"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
min_ident_chars = "deny"
missing_fields_in_debug = "warn"
missing_safety_doc = "deny"
multiple_unsafe_ops_per_block = "warn"
mut_mut = "warn"
needless_bitwise_bool = "deny"
needless_borrowed_reference = "allow"
needless_collect = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
negative_feature_names = "warn"
non_zero_suggestions = "warn"
or_fun_call = "warn"
pathbuf_init_then_push = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "deny"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "deny"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_closure = "allow"
redundant_else = "warn"
redundant_pattern_matching = "allow"
redundant_slicing = "allow"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_option = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "deny"
semicolon_inside_block = "warn"
set_contains_or_insert = "warn"
significant_drop_in_scrutinee = "warn"
single_char_pattern = "warn"
str_split_at_newline = "warn"
str_to_string = "deny"
string_add = "deny"
string_add_assign = "deny"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
struct_excessive_bools = "warn"
struct_field_names = "deny"
suspicious_operation_groupings = "warn"
tests_outside_test_module = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "warn"
trivial_regex = "warn"
try_err = "deny"
tuple_array_conversions = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "deny"
unused_result_ok = "warn"
unwrap_used = "deny"
used_underscore_binding = "warn"
used_underscore_items = "warn"
useless_let_if_seq = "deny"
wildcard_dependencies = "deny"
wildcard_enum_match_arm = "warn"
wildcard_imports = "deny"

[workspace.dependencies.derive_more]
version = "2"
features = ["debug", "display", "from", "into", "error"]

[workspace.dependencies.bon]
version = "=3.4.0"

[workspace.dependencies.color-eyre]
version = "0.6"
default-features = false
features = ["track-caller"]

[workspace.dependencies.dotenvy]
version = "0.15"

[workspace.dependencies.clap]
version = "4.5"
features = ["derive"]

[workspace.dependencies.zerocopy]
version = "0.8"
features = ["std", "simd-nightly", "derive"]

[workspace.dependencies.pin-project]
version = "1.1"

[workspace.dependencies.bytes]
version = "1.10"

[workspace.dependencies.time]
version = "0.3"

[workspace.dependencies.url]
version = "2.5"

[workspace.dependencies.ulid]
version = "1.2"

[workspace.dependencies.semver]
version = "1.0"

[workspace.dependencies.serde]
version = "1"

[workspace.dependencies.serde_json]
version = "1"

[workspace.dependencies.serde_html_form]
version = "0.2"

[workspace.dependencies.serde_urlencoded]
version = "0.7"

[workspace.dependencies.toml]
version = "0.8"
default-features = false

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["std", "smallvec", "registry"]

[workspace.dependencies.futures-util]
version = "0.3"
default-features = false

[workspace.dependencies.tokio]
version = "1.43"
features = ["tracing", "rt", "time"]

[workspace.dependencies.tokio-util]
version = "0.7"

[workspace.dependencies.tokio-websockets]
version = "0.11"
features = ["nightly"]

[workspace.dependencies.tower]
version = "0.5"

[workspace.dependencies.http]
version = "1.2"

[workspace.dependencies.http-body]
version = "1.0"

[workspace.dependencies.http-body-util]
version = "0.1"

[workspace.dependencies.headers]
version = "0.4"
features = ["nightly"]

[workspace.dependencies.mime]
version = "0.3"

[workspace.dependencies.cookie]
version = "0.18"

[workspace.dependencies.tower-http]
version = "0.6"

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "rustls-tls"]

[workspace.dependencies.axum-core]
version = "0.5"
features = ["tracing"]

[workspace.dependencies.utoipa]
version = "5.3"
features = ["preserve_order", "time", "ulid", "url"]

[workspace.dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "macros",
  "migrate",
  "mysql",
  "runtime-tokio",
  "tls-rustls",
  "json",
  "time",
]

[workspace.dependencies.lettre]
version = "0.11"
default-features = false
features = ["serde"]

[workspace.dependencies.addr]
version = "0.15"
features = ["serde"]

[workspace.dependencies.md-5]
version = "0.10"

[workspace.dependencies.rand]
version = "0.9"
features = ["nightly"]
