[package]
name = "cs2kz-api"
version = "0.0.0"
readme = "../README.md"
publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
production = []

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true

[dependencies.cs2kz]
path = "../cs2kz"
features = ["rand", "serde", "sqlx"]

[dependencies.problem-details]
path = "../problem-details"
features = ["axum"]

[dependencies.steam-openid]
path = "../steam-openid"

[dependencies.tokio]
version = "1.39"
features = ["macros", "rt-multi-thread", "tracing", "net", "signal", "process"]

[dependencies.tokio-util]
version = "0.7"
features = ["rt"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.tower]
version = "0.5"
features = ["util"]

[dependencies.tower-http]
version = "0.5"
features = [
  "add-extension",
  "catch-panic",
  "cors",
  "request-id",
  "set-status",
  "trace",
  "validate-request",
]

[dependencies.tower-sessions]
path = "../tower-sessions"

[dependencies.http]
version = "1.0"

[dependencies.http-body-util]
version = "0.1"

[dependencies.headers]
version = "0.4"

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
  "macros",
  "runtime-tokio",
  "tls-rustls",
  "mysql",
  "time",
  "uuid",
  "json",
]

[dependencies.axum]
version = "0.7"
default-features = false
features = ["macros", "http1", "http2", "json", "ws", "tokio"]

[dependencies.axum-extra]
version = "0.9"
default-features = false
features = ["cookie", "query", "typed-header"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "rustls-tls", "json"]

[dependencies.tracing-appender]
version = "0.2"

[dependencies.console-subscriber]
version = "0.4"

[dependencies.tracing-journald]
version = "0.3"

[dependencies.serde_json]
version = "1.0"

[dependencies.toml]
version = "0.8"

[dependencies.time]
version = "0.3"
features = ["serde-human-readable"]

[dependencies.uuid]
version = "1.0"
features = ["v4", "v7", "serde"]

[dependencies.md5]
version = "0.7"

[dependencies.hex]
version = "0.4"
features = ["serde"]

[dependencies.url]
version = "2.5"
features = ["serde"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.cookie]
version = "0.18"

[dependencies.mime]
version = "0.3"

[dependencies.pin-project]
version = "1.0"

[dependencies.derive_more]
version = "1.0"
features = ["constructor", "debug"]

[dev-dependencies.ctor]
version = "0.2"

[dev-dependencies.anyhow]
version = "1.0"
