# This crate is part of the cs2kz-api project.
#
# Copyright (C) 2024  AlphaKeks <alphakeks@dawn>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see https://www.gnu.org/licenses.

[package]
name = "cs2kz"
version = "0.0.0"
readme = "./README.md"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.thiserror]
version = "1"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.sqlx]
version = "0.8"
default-features = false
optional = true

[lints]
workspace = true
