[package]
name = "cs2kz-api-macros"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "../../README.md"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "../../LICENSE"

[features]

[lints]
workspace = true

[dependencies]
