[package]
name = "cs2kz-api-macros"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "../../README.md"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "../../LICENSE"

[lib]
proc-macro = true

[features]

[lints]
workspace = true

[dependencies.proc-macro-error]
version = "1"

[dependencies.syn]
version = "2"
features = ["full", "extra-traits"]

[dependencies.quote]
version = "1"
default-features = false
