[package]
name = "problem-details"
version = "1.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2024"
license = "MIT"
publish = false

[lints]
workspace = true

[features]
axum = ["dep:axum-core"]

[dependencies]
mime.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true

[dependencies.axum-core]
optional = true
workspace = true

[dependencies.utoipa]
optional = true
workspace = true
