[package]
name = "steam-id"
version = "1.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2024"
license = "GPL-3.0"
publish = false

[lints]
workspace = true

[dependencies.derive_more]
workspace = true
features = ["from_str"]

[dependencies.serde]
workspace = true
optional = true

[dependencies.rand]
workspace = true
optional = true
