[package]
name = "steam-openid"
version = "1.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2024"
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
bytes.workspace = true
url.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
tracing.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
mime.workspace = true

[dependencies.steam-id]
path = "../steam-id"
